syntax = "proto3";

option go_package = "github.com/ozonva/ova-promise-api/implementation/grpc.server/protocol/promise";

package promise_grpc;

import "google/protobuf/timestamp.proto";

service PromiseHandler {
  rpc CreatePromise(CreateRequest) returns (Promise);
  rpc DescribePromise(UUID) returns (Promise);
  rpc ListPromises(ListPromisesRequest) returns (ListPromisesResponse);
  rpc RemovePromise(UUID) returns (SuccessMessage);
}

message SuccessMessage{
  string message = 1;
}

message UUID {
  bytes id = 1;
}

message CreateRequest{
  int64 UserID = 1;
  string Description = 2;
}

message Promise {
  string ID = 1;
  int64 UserID = 2;
  string Description = 3;
  string Status = 4;
  google.protobuf.Timestamp date_deadline = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message ListPromisesRequest{
  int64 limit = 1;
  int64 offset = 2;
}

message ListPromisesResponse{
  repeated Promise Promises = 1;
  string Cursor = 2;
}